--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,9 @@
     <string name="news_28">ZonePerfect Protein Bars</string>
 
 
+    <string name="tv">Shopping აპლიკაცია, რომელიც სთავაზობს საკვებ-დანამატებს ხალხს, რომელიც ჯანსაღ ცხოვრებას ეწევა.
+
+ჩვენს გარშემო მრავალ ადამიანს ვარჯიშის დაწყება სურს.ზოგი კი უკვე აქტიურად არის ამ სპორტში ჩაფლული. ვარჯიშთან ერთად,კვებაც აუცილებელია. თუნდაც ის ვინც ამ სფეროში გამოცდილია, დაგვეთანხმება, რომ დიეტა ყველაზე რთული ნაწილია. ჩვენი აპლიკაციის მიზანი სწორედ ამ პრობლემის გამოსწორებაა. მასში თავმოყრილია წიგნები რეცეპტების,რომელიც თუნდაც fast food-ების ჯანსაღი ვარიანტების გაკეთებას გვასწავლის. მისი მეშვეობით შესაძლებელი იქნება მსგავსი პროდუქტების შეძენა სახლიდან გაუსვლელად.</string>
+
+
 </resources>
